[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simcalibration"
version = "0.1.0"
description = "Simulation Calibration framework"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name="Mostafa Alwash", email="malwash@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "graphviz>=0.16",
    "numpy>=1.20.2",
    "pandas>=1.2.4",
    "igraph>=0.9.6",
    "scikit-learn>=0.24.2",
    "scipy>=1.6.2",
    "tabulate>=0.8.9",
    "bnlearn @ git+https://github.com/erdogant/bnlearn.git@master",
    "dagsim~=1.0.6",
    "statsmodels~=0.13.2",
    "transpose-dict",
    "matplotlib>=3.5,<4.0",
    "seaborn>=0.11.2",
    "rpy2~=3.4.5; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "ipython>=7.27.0",
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "black",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/uio-bmi/SimCal"
Issues = "https://github.com/uio-bmi/SimCal/issues"

[project.scripts]
simcalibration = "simcalibration.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
